--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Web Workers basic example</title>
 
     <link rel="stylesheet" href="style.css">
+    <style>
+        .msg {
+            font-size: 8px;
+            color: red;
+            border: 1px solid violet;
+        }
+    </style>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -30,6 +37,8 @@
     </form>
 
     <p class="result">Result: 0</p>
+    <p class="msg" id="mainmsg"></p>
+    <p class="msg" id="workermsg"></p>
 
     </div>
   </body>
